# service-management-multiagent-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
datasets/: sample1.json
src/: main.py  simulation.py
src/algorithms/: __init__.py
src/algorithms/smms/: algorithm.py  service_management_agent.py
src/schemas/: algorith_parameters.py
