[project]
name = "service-management-multiagent-system"
version = "0.1.2"
description = ""
authors = [
    {name = "ArielMAJ",email = "ariel.maj@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "edge-sim-py @ git+https://github.com/ArielMAJ/EdgeSimPy.git@1.3.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
black = "^25.1.0"
